crates/compiler/src/tests/e2e/bad/0028_vec_mixed_types/main.gom
fn main() -> unit {
  let nums = vec_new();
  vec_push(nums, 1);
  vec_push(nums, 2);
  vec_push(nums, "three");
  ()
}
